--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==3.0.8
 django-simple-history==2.12.0
 mercurial==5.4.2
 Pillow==8.1.0
+psycopg2==2.8.6
 pytz==2020.1
 six==1.15.0
 sqlparse==0.3.1
