--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 asgiref==3.2.10
 Django==3.0.8
 django-simple-history==2.12.0
+gunicorn==20.1.0
 mercurial==5.4.2
 Pillow==8.1.0
 psycopg2==2.8.6
 pytz==2020.1
 six==1.15.0
 sqlparse==0.3.1
-gunicorn
