--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,28 @@
 asgiref==3.2.10
+attrs==20.3.0
 Django==3.0.8
+django-debug-toolbar==3.2
 django-simple-history==2.12.0
+djangorestframework==3.12.4
+factory-boy==3.2.0
+Faker==8.1.1
 gunicorn==20.1.0
+iniconfig==1.1.1
 mercurial==5.4.2
+packaging==20.9
 Pillow==8.1.0
+pluggy==0.13.1
 psycopg2==2.8.6
+psycopg2-binary==2.8.6
+py==1.10.0
+pydantic==1.8.1
+pyparsing==2.4.7
+pytest==6.2.3
+pytest-django==4.2.0
+python-dateutil==2.8.1
 pytz==2020.1
 six==1.15.0
 sqlparse==0.3.1
+text-unidecode==1.3
+toml==0.10.2
+typing-extensions==3.7.4.3
