--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
+amqp==5.0.6
 asgiref==3.2.10
 attrs==20.3.0
+billiard==3.6.4.0
+celery==5.0.5
+click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.1.6
 Django==3.0.8
 django-debug-toolbar==3.2
 django-simple-history==2.12.0
@@ -8,10 +15,12 @@ factory-boy==3.2.0
 Faker==8.1.1
 gunicorn==20.1.0
 iniconfig==1.1.1
+kombu==5.0.2
 mercurial==5.4.2
 packaging==20.9
 Pillow==8.1.0
 pluggy==0.13.1
+prompt-toolkit==3.0.18
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
 py==1.10.0
@@ -26,3 +35,5 @@ sqlparse==0.3.1
 text-unidecode==1.3
 toml==0.10.2
 typing-extensions==3.7.4.3
+vine==5.0.0
+wcwidth==0.2.5
