--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ pytest==6.2.3
 pytest-django==4.2.0
 python-dateutil==2.8.1
 pytz==2020.1
+redis==3.5.3
 six==1.15.0
 sqlparse==0.3.1
 text-unidecode==1.3
