--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,5 @@ services:
             - ./:/usr/src/app/
         ports: 
             - '8000:8000'
+        env_file:
+            - ../VARENV.env
