--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,6 @@ services:
             - ./:/usr/src/app/
         ports: 
             - '8000:8000'
+        command: gunicorn hospital.wsgi:application --bind 0.0.0.0:8000
         env_file:
             - ../VARENV.env
